2014-04-07  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java, x_display.c: The failure of animating gif images downloaded
	  from remote hosts on Android is fixed.

	* c_animgif.c: The processing of dispose method is fixed.

2014-04-06  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, c_animgif.c: ~/.mlterm/anim%d.gif => ~/.mlterm/anim.gif

	* c_animgif.c: Separated from c_imagelib.c.

	* android/jni/x_display.c, android/jni/x_event_source.c, MLActivity.java:
	  Animation GIF is supported on Android.

2014-04-05  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, x_screen.[ch]: Waiting between animation frames is
	  managed in x_screen.[ch] instead of x_picture.c.

	* gdiplus.cpp: Fix for win32.

2014-04-05  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_window.c: XSetClipMask(None) is called in x_window_update().

	* x_picture.[ch], c_imagelib.c, gdiplus.cpp, xlib/x_imagelib.c, x_draw_str.c:
	  The number of gif animation frames is unlimited.

2014-03-31  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: O_BINARY is added to open() in reading animation gif on win32.

	* ml_vt100_parser.c: Accessing free'ed memory is fixed.

2014-03-31  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* x_screen.c:
	  - x_window_t::idling is always set and whether blink_cursor is enabled
	    or not is stored in x_screen_t::cursor_blink_wait.
	    (cursor_blink_wait == 0 => disable blinking
	     cursor_blink_wait < 0  => enable blinking (hide cursor)
	     cursor_blink_wait > 0  => enable blinking (show cursor))
	  - prev_inline_pic is added to x_screen_t.

	* ml_vt100_parser.[ch]:
	  - "add_frame" is added to OSC 5379.
	  - add_frame_to_animation event is added to ml_xterm_event_listener_t.

	* x_picture.[ch]:
	  - next_frame and anim_wait are added to x_inline_picture_t.
	  - x_add_frame_to_animation() and x_animate_inline_pictures() are added.

	* gdiplus.c:
	  - create_cardinals_from_file() supports Animation GIF.