@@ -1,3 +1,8 @@
+2014-04-09  Araki Ken  <arakiken@users.sf.net>
+
+	* x_event_source.c: update_ime_text() and x_display_idling() are called
+	  in idling.
+
 2014-04-07  Araki Ken  <arakiken@users.sf.net>
 
 	* MLActivity.java, x_display.c: The failure of animating gif images downloaded
